// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`open and close: closed 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_4" id="expandable_toggle_4" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_4" aria-labelledby="expandable_toggle_4" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`open and close: opened 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_4" id="expandable_toggle_4" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_4" aria-labelledby="expandable_toggle_4" aria-hidden="false">Content</div>
    </a-expandable>"
`;

exports[`open and close: closed 2`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_13" id="expandable_toggle_13" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_13" aria-labelledby="expandable_toggle_13" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`open and close: opened 2`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_13" id="expandable_toggle_13" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_13" aria-labelledby="expandable_toggle_13" aria-hidden="false">Content</div>
    </a-expandable>"
`;

exports[`open and close: closed 3`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_22" id="expandable_toggle_22" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_22" aria-labelledby="expandable_toggle_22" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`open and close: opened 3`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_22" id="expandable_toggle_22" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_22" aria-labelledby="expandable_toggle_22" aria-hidden="false">Content</div>
    </a-expandable>"
`;
